--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.0.28",
     "react": "^17.0.0 || ^18.0.0",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-lottie": "^1.2.10",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0"
   },
@@ -32,6 +33,7 @@
     "@types/node": "^24.0.1",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
+    "@types/react-lottie": "^1.2.10",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
